@@ -11,6 +11,7 @@ Changes in Release 1.1.3
 [SC-78] - AACLI fail testing storedId
 [SC-79] - Configuration Reloading only works when RetryAttempts are configured
 [SC-80] - positional parameters do not get substituted in Mapped attr defs 
+[SC-81] -  attribute-resolver.xml ScriptFile type causes IdP startup failure
 
 Changes in Release 1.1.2
 =============================================
